# race_car

./: .gitignore  LICENSE  README.md  auto.blend  auto.dae  autó.stl  kerekek.blend  kerekek.dae
archive/launch/: bicycle_sim.launch  check_urdf.launch  f1_car_sim.launch  view_bicycle_model.launch  view_bicycle_robot.launch
archive/rviz/: bicycle.rviz  f1_car.rviz
archive/urdf/: bicycle.xacro  f1_car.gazebo  f1_car.urdf  f1_car.xacro  f1_car_macro.xacro
race_car_control/: CMakeLists.txt  package.xml
race_car_control/config/: control_ackermann_drive.yaml  control_joint_state.yaml  ctrl_gains.yaml  ctrl_steer_bot_hardware_gazebo.yaml
race_car_control/launch/: control.launch
race_car_description/: CMakeLists.txt  package.xml
race_car_description/launch/: description.launch
race_car_description/urdf/: camera.xacro  f1_car.xacro  inertials.xacro  materials.xacro  wheel.xacro
race_car_gazebo/: CMakeLists.txt  package.xml
race_car_gazebo/blender/: f1_car_body.blend  f1_wheel_front.blend  f1_wheel_rear.blend  track_editable.blend
race_car_gazebo/launch/: monaco.launch  race_car_spawn.launch  race_car_track_empty.launch  race_car_track_monaco.launch
race_car_gazebo/meshes/: f1_car_body.dae  f1_car_wheel_front.dae  f1_car_wheel_rear.dae
race_car_gazebo/models/: f1_car_wheels.stl
race_car_gazebo/models/monaco_model/: model.config  model.sdf
race_car_gazebo/worlds/: empty.world  monaco.world
race_car_line_following/: CMakeLists.txt  package.xml
race_car_line_following/launch/: line_following.launch
race_car_line_following/scripts/: line_following.py
race_car_viz/: CMakeLists.txt  package.xml
race_car_viz/launch/: view_f1_car_model.launch  view_f1_car_robot.launch  view_model.launch
race_car_viz/rviz/: f1_car.rviz  model.rviz  robot.rviz
steer_bot_hardware_gazebo/include/steer_bot_hardware_gazebo/: steer_bot_hardware_gazebo.h
steer_bot_hardware_gazebo/src/: steer_bot_hardware_gazebo.cpp
temp/: CMakeLists.txt  package.xml
