<?xml version="1.0"?>
<package format="2">
  <name>race_car_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation launch files</description>
  <maintainer email="bianka.matics@edu.bme.hu">Binaka Matics</maintainer>
  <maintainer email="demeter.csaba@edu.bme.hu">Csaba Demeter</maintainer>
  <maintainer email="fekete.daniel@edu.bme.hu">Daniel Fekete</maintainer>
  <author email="bianka.matics@edu.bme.hu">Binaka Matics</author>
  <author email="demeter.csaba@edu.bme.hu">Csaba Demeter</author>
  <author email="fekete.daniel@edu.bme.hu">Daniel Fekete</author>
  <license>MIT</license>
  <url type="website">https://github.com/fekete-d/race_car</url>
  <url type="repository">https://github.com/fekete-d/race_car</url>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>race_car_description</build_depend>
  <build_depend>race_car_control</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rqt_robot_steering</build_depend>
  <build_depend>hector_trajectory_server</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>race_car_description</build_export_depend>
  <build_export_depend>race_car_control</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rqt_robot_steering</build_export_depend>
  <build_export_depend>hector_trajectory_server</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>race_car_description</exec_depend>
  <exec_depend>race_car_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>hector_trajectory_server</exec_depend>

  <exec_depend>xacro</exec_depend>
</package>
