<?xml version="1.0"?>
<package format="2">
  <name>race_car_line_following</name>
  <version>0.0.0</version>
  <description>Line following based on camera image processing</description>
  <maintainer email="bianka.matics@edu.bme.hu">Binaka Matics</maintainer>
  <maintainer email="demeter.csaba@edu.bme.hu">Csaba Demeter</maintainer>
  <maintainer email="fekete.daniel@edu.bme.hu">Daniel Fekete</maintainer>
  <author email="bianka.matics@edu.bme.hu">Binaka Matics</author>
  <author email="demeter.csaba@edu.bme.hu">Csaba Demeter</author>
  <author email="fekete.daniel@edu.bme.hu">Daniel Fekete</author>
  <license>MIT</license>
  <url type="website">https://github.com/fekete-d/race_car</url>
  <url type="repository">https://github.com/fekete-d/race_car</url>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>theora_image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>theora_image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>theora_image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <!-- <build_depend></build_depend>
  <build_export_depend></build_export_depend>
  <exec_depend></exec_depend> -->

</package>
