<?xml version="1.0"?>
<package format="2">
  <name>race_car_viz</name>
  <version>0.0.0</version>
  <description>Visualisation configuration</description>
  <maintainer email="bianka.matics@edu.bme.hu">Binaka Matics</maintainer>
  <maintainer email="demeter.csaba@edu.bme.hu">Csaba Demeter</maintainer>
  <maintainer email="fekete.daniel@edu.bme.hu">Daniel Fekete</maintainer>
  <author email="bianka.matics@edu.bme.hu">Binaka Matics</author>
  <author email="demeter.csaba@edu.bme.hu">Csaba Demeter</author>
  <author email="fekete.daniel@edu.bme.hu">Daniel Fekete</author>
  <license>MIT</license>
  <!-- TODO <url type="website">http://wiki.ros.org/race_car_viz</url> -->
  <!-- TODO <url type="repository">http://wiki.ros.org/race_car_viz</url> -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>race_car_description</exec_depend>
</package>
