<?xml version="1.0"?>
<package format="2">
  <name>temp</name>
  <version>0.0.0</version>
  <description>The temp package</description>
  <maintainer email="bianka.matics@edu.bme.hu">Binaka Matics</maintainer>
  <maintainer email="demeter.csaba@edu.bme.hu">Csaba Demeter</maintainer>
  <maintainer email="fekete.daniel@edu.bme.hu">Daniel Fekete</maintainer>
  <author email="bianka.matics@edu.bme.hu">Binaka Matics</author>
  <author email="demeter.csaba@edu.bme.hu">Csaba Demeter</author>
  <author email="fekete.daniel@edu.bme.hu">Daniel Fekete</author>
  <license>MIT</license>
  <!-- TODO <url type="website">http://wiki.ros.org/race_car_viz</url> -->
  <!-- TODO <url type="repository">http://wiki.ros.org/race_car_viz</url> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>steer_bot_hardware_gazebo</build_depend>
  <build_depend>steer_drive_controller</build_depend>
  <build_depend>stepback_and_steerturn_recovery</build_depend>
  <build_depend>steer_drive_ros</build_depend> -->

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <!-- <build_export_depend>steer_bot_hardware_gazebo</build_export_depend>
  <build_export_depend>steer_drive_controller</build_export_depend>
  <build_export_depend>stepback_and_steerturn_recovery</build_export_depend>
  <build_export_depend>steer_drive_ros</build_export_depend> -->

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- <exec_depend>ackermann_steering_controller</exec_depend> -->
  <!-- <exec_depend>controller_manager</exec_depend> -->
  <!-- <exec_depend>steer_bot_hardware_gazebo</exec_depend>
  <exec_depend>steer_drive_controller</exec_depend>
  <exec_depend>stepback_and_steerturn_recovery</exec_depend>
  <exec_depend>steer_drive_ros</exec_depend> -->

  <!-- <build_depend></build_depend>
  <build_export_depend></build_export_depend>
  <exec_depend></exec_depend> -->

</package>
